# auroran-ha-ai-manager

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: ALEXA_TO_CLAWDIA_SETUP.md  LEARNINGS_MEMORY.md  ML_STRATEGY.md  SKILL_MEMORY_INFLUX.md
src/auroran_ha_ai_manager/: __init__.py  alerts.py  config.py  ha_client.py  influx_memory.py  main.py  mqtt_client.py  optimizer.py  pricing.py
