[project]
name = "auroran-ha-ai-manager"
version = "0.1.0"
description = "AI assistant service for Home Assistant monitoring and energy-aware recommendations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "paho-mqtt>=2.1.0",
]

[project.scripts]
auroran-ha-ai-manager = "auroran_ha_ai_manager.main:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
